--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/express": "^4.17.17",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "json": "^11.0.0",
     "jsonwebtoken": "^9.0.1",
     "nodemon": "^3.0.1",
+    "types-json": "^4.0.1",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
